alter footer to prevent overspill

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -309,6 +309,7 @@ footer {
     height: 200px;
     background-color: #333;
     position: relative;
+    padding-right: 20px;
 }
 
 @media only screen and (max-width: 790px) {
@@ -349,12 +350,17 @@ footer {
     justify-content: space-evenly;
     list-style-type: none;
     position: relative;
+    width: 100%;
 }
 
 .social {
     position: absolute;
     bottom: 0;
     font-size: 30px;
+}
+
+.footer-right {
+    padding-right: 20px;
 }
 
 
@@ -368,7 +374,7 @@ footer {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    background-image: url(../images/home-images/hero-img-oysters.jpg);
+    background-image: url(../images/opening-images/opening-hero-img.jpg);
 }
 
 .alt-headings {
@@ -513,11 +519,12 @@ footer {
     background-color: aliceblue;
     height: fit-content;
     max-width: 60%;
-    margin-top: 150px;
+    margin-top: 120px;
     margin-bottom: -80px;
     padding-top: 30px;
     padding-bottom: 20px;
     text-align: center;
+    border-radius: 8px;
 }
 
 .alt-hero-box > p {
